# secret-storage

./: .dockerignore  .env.example  .gitignore  AWS_INTEGRATION.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  VAULT_INTEGRATION.md  debug_wrapper.sh  docker-compose.api.yml  docker-compose.simple.yml  docker-compose.vault.yml  test-setup.sh
.cargo/: audit.toml
adapters/aws-kms-adapter/: Cargo.toml  README.md
adapters/aws-kms-adapter/bindings/wasm/: .gitignore  README.md
adapters/aws-kms-adapter/bindings/wasm/aws_kms_adapter_wasm/: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
adapters/aws-kms-adapter/bindings/wasm/aws_kms_adapter_wasm/examples/: README.md  package.json  tsconfig.json
adapters/aws-kms-adapter/bindings/wasm/aws_kms_adapter_wasm/examples/src/: main.ts  storage.ts
adapters/aws-kms-adapter/bindings/wasm/aws_kms_adapter_wasm/lib/: index.ts  tsconfig.json
adapters/aws-kms-adapter/bindings/wasm/aws_kms_adapter_wasm/src/: error.rs  lib.rs  storage.rs  wasm_signer_signature_scheme_multi.rs  wasm_storage_signature_scheme_multi.rs
adapters/aws-kms-adapter/bindings/wasm/aws_kms_adapter_wasm/src/utils/: aws.rs  mod.rs  signature_scheme_multi.rs  typed_key_signature.rs
adapters/aws-kms-adapter/bindings/wasm/aws_kms_adapter_wasm/src/wasm/: mod.rs  signature_scheme_multi.rs  signer_signature_scheme_multi.rs  signer_typed_key_signature.rs  storage_signature_scheme_multi.rs  storage_typed_key_signature.rs  typed_key_signature.rs
adapters/aws-kms-adapter/examples/: Cargo.toml  key_deletion_demo.rs  secp256r1_demo.rs  signing_demo.rs
adapters/aws-kms-adapter/examples/0_basic/: key_deletion_demo.rs  secp256r1_demo.rs  signing_demo.rs
adapters/aws-kms-adapter/examples/1_integration/: 0_use_new_keys.rs  1_use_existing_key.rs  2_schedule_key_deletion.rs
adapters/aws-kms-adapter/examples/src/: lib.rs
adapters/aws-kms-adapter/src/: config.rs  error.rs  lib.rs  signer.rs  signer_iota.rs  signer_raw.rs  storage.rs  storage_iota.rs  storage_jwk_storage.rs  storage_raw.rs
adapters/aws-kms-adapter/src/signature_scheme_aws/: key_storage.rs  mod.rs  signer.rs
adapters/aws-kms-adapter/src/signature_scheme_iota/: jwk_storage.rs  key_storage.rs  mod.rs  signer.rs  utils.rs
adapters/aws-kms-adapter/src/signature_scheme_multi/: key_id_definition.rs  key_storage_trait.rs  mod.rs  signer_trait.rs
adapters/aws-kms-adapter/src/typed_key_signature/: key_id_definition.rs  key_storage_trait.rs  mod.rs  signer_trait.rs
adapters/aws-kms-adapter/src/utils/: aws_client.rs  key_utils.rs  kms_operations.rs  mod.rs
adapters/vault-adapter/: Cargo.toml  README.md
adapters/vault-adapter/examples/: basic_usage.rs  signing_demo.rs  vault_agent_mode.rs
adapters/vault-adapter/src/: config.rs  error.rs  lib.rs  signer.rs  storage.rs
adapters/vault-adapter/src/utils/: key_utils.rs  mod.rs  vault_client.rs  vault_operations.rs
applications/: signature.txt  (+1 more)
applications/hv-iota-e2e-test/: Cargo.toml  Dockerfile  README.md
applications/hv-iota-e2e-test/src/: error.rs  main.rs  main_debug.rs  services.rs
applications/storage-factory/: Cargo.toml
applications/storage-factory/examples/: iota_address_faucet_demo.rs  iota_kms_demo.rs  iota_vault_demo.rs
applications/storage-factory/examples/utils/: crypto.rs  faucet.rs  iota_client.rs  key_generation.rs  mod.rs
applications/storage-factory/src/: builder.rs  error.rs  lib.rs
integration/multi-schema/: Cargo.toml
integration/multi-schema-to-iota/: Cargo.toml
integration/multi-schema-to-iota/bindings/wasm/: .gitignore
integration/multi-schema-to-iota/bindings/wasm/multi_schema_to_iota_wasm/: Cargo.toml  package-lock.json  package.json  tsconfig.json
integration/multi-schema-to-iota/bindings/wasm/multi_schema_to_iota_wasm/examples/: README.md
integration/multi-schema-to-iota/bindings/wasm/multi_schema_to_iota_wasm/examples/src/: main.ts  signing.ts
integration/multi-schema-to-iota/bindings/wasm/multi_schema_to_iota_wasm/lib/: tsconfig.json
integration/multi-schema-to-iota/bindings/wasm/multi_schema_to_iota_wasm/src/: error.rs  lib.rs
integration/multi-schema-to-iota/bindings/wasm/multi_schema_to_iota_wasm/src/utils/: mod.rs
integration/multi-schema-to-iota/src/: jwk_storage_trait.rs  key_storage_trait.rs  lib.rs  signer.rs  signer_trait.rs  utils.rs
integration/multi-schema/src/: key_id_definition.rs  key_type.rs  lib.rs  public_key.rs  signature.rs
integration/typed-key-jwk-storage-iota-adapter/: Cargo.toml  README.md
integration/typed-key-jwk-storage-iota-adapter/bindings/wasm/typed_key_jwk_storage_iota_adapter_wasm/: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
integration/typed-key-jwk-storage-iota-adapter/bindings/wasm/typed_key_jwk_storage_iota_adapter_wasm/lib/: index.ts  tsconfig.json
integration/typed-key-jwk-storage-iota-adapter/bindings/wasm/typed_key_jwk_storage_iota_adapter_wasm/src/: error.rs  lib.rs
integration/typed-key-jwk-storage-iota-adapter/bindings/wasm/typed_key_jwk_storage_iota_adapter_wasm/src/utils/: typed_key_signature.rs
integration/typed-key-jwk-storage-iota-adapter/src/: jwk_storage_trait.rs  lib.rs  storage.rs
integration/typed-key-signature/: Cargo.toml  README.md
integration/typed-key-signature/src/: key_id_definition.rs  key_type.rs  lib.rs  public_key.rs  scheme.rs  signature.rs
integration/typed-key-signer-storage-iota-adapter/: Cargo.toml  README.md
integration/typed-key-signer-storage-iota-adapter/bindings/wasm/: .gitignore
integration/typed-key-signer-storage-iota-adapter/bindings/wasm/typed_key_signer_storage_iota_adapter_wasm/: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
integration/typed-key-signer-storage-iota-adapter/bindings/wasm/typed_key_signer_storage_iota_adapter_wasm/lib/: index.ts  tsconfig.json
integration/typed-key-signer-storage-iota-adapter/bindings/wasm/typed_key_signer_storage_iota_adapter_wasm/src/: lib.rs
integration/typed-key-signer-storage-iota-adapter/src/: key_storage_trait.rs  lib.rs  signer.rs  signer_trait.rs  storage.rs  utils.rs
(+116 files in other folders)
