[workspace]
resolver = "2"
members = [
    "core/secret-storage",
    "adapters/aws-kms-adapter",
    "adapters/vault-adapter",
    "applications/storage-factory",
    "integration/typed-key-signature",
    "integration/typed-key-signer-storage-iota-adapter",
    "integration/typed-key-jwk-storage-iota-adapter",
]

exclude = [
    "adapters/aws-kms-adapter/bindings/wasm/aws-kms-adapter-wasm",
    "integration/typed-key-signer-storage-iota-adapter/bindings/wasm/typed_key_signer_storage_iota_adapter_wasm",
    "integration/typed-key-jwk-storage-iota-adapter/bindings/wasm/typed_key_jwk_storage_iota_adapter_wasm",
    "applications/hv-iota-e2e-test",
]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
async-trait = "0.1"

[patch."https://github.com/iotaledger/secret-storage.git"]
secret-storage = { path = "core/secret-storage", package = "secret-storage" }

[patch."https://tbd-github.com/iotaledger/aws-kms-adapter.git"]
aws-kms-adapter = { path = "adapters/aws-kms-adapter", package = "aws-kms-adapter" }

[patch."https://tbd-github.com/iotaledger/typed-key-signature.git"]
typed-key-signature = { path = "integration/typed-key-signature" }

[patch."https://tbd-github.com/iotaledger/typed-key-signer-storage-iota-adapter.git"]
typed-key-signer-storage-iota-adapter = { path = "integration/typed-key-signer-storage-iota-adapter" }

[patch."https://tbd-github.com/iotaledger/typed-key-jwk-storage-iota-adapter.git"]
typed-key-jwk-storage-iota-adapter = { path = "integration/typed-key-jwk-storage-iota-adapter" }
