[workspace]
resolver = "2"
members = [
    "core/secret-storage",
    "adapters/aws-kms-adapter",
    "adapters/aws-kms-adapter/examples",
    "integration/typed-key-signature",
    "integration/typed-key-signer-storage-iota-adapter",
    "integration/typed-key-jwk-storage-iota-adapter",
]

exclude = [
    "adapters/aws-kms-adapter/bindings/wasm/aws-kms-adapter-wasm",
    "integration/typed-key-signer-storage-iota-adapter/bindings/wasm/typed_key_signer_storage_iota_adapter_wasm",
    "integration/typed-key-jwk-storage-iota-adapter/bindings/wasm/typed_key_jwk_storage_iota_adapter_wasm",
]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
async-trait = "0.1"

[patch."https://github.com/iotaledger/secret-storage.git"]
secret-storage = { path = "core/secret-storage" }
