[package]
name = "aws-kms-adapter"
version = "0.1.0"
edition = "2021"
authors = ["IOTA Stiftung"]
homepage = "https://www.iota.org"
license = "Apache-2.0"
repository = "https://github.com/iotaledger/secret-storage"
rust-version = "1.65"
description = "AWS KMS adapter for secret-storage core traits"
keywords = ["crypto", "aws", "kms", "storage", "keys"]

[dependencies]
secret-storage = { path = "../../core/secret-storage" }
aws-config = "1.1"
aws-sdk-kms = "1.94"
aws-sdk-sts = "1.94"
bcs = { version = "0.1", optional = true }
blake2 = { version = "0.10", optional = true }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22"
thiserror = "2"
typenum = { version = "1.0", optional = true }
anyhow = "1"
async-trait = "0.1"
strum = { version = "0.27", features = ["derive"] }
k256 = { version = "0.13.3", default-features = false, features = ["std", "ecdsa", "ecdsa-core", "jwk"], optional = true }
p256 = { version = "0.13.2", default-features = false, features = ["std", "ecdsa", "ecdsa-core", "jwk", "arithmetic"], optional = true }
serde_json = { version = "1.0", default-features = false, features = ["std"], optional = true }
ed25519 = { version = "2.2", features = ["pkcs8", "alloc", "zeroize"], optional = true}
pkcs8 = { version = "0.10", features = ["std"], optional = true}
# async-trait = { version = "0.1.81", default-features = false, optional = true }
iota-keys = { git = "https://github.com/iotaledger/iota.git", package = "iota-keys", tag = "v1.11.0" }

# We either have to keep track on updates of this dependency in `identity_iota`
iota_interaction = { git = "https://github.com/iotaledger/product-core.git", tag = "v0.8.6", package = "iota_interaction", optional = true}
# or import the re-export from `identity_iota`, but currently, this would add a bit more dependencies, than we might want to.
# iota_identity = { git = "https://github.com/iotaledger/identity.git", default-features = false, features = ["iota-client"]}
identity_iota = { git = "https://github.com/iotaledger/identity.git", tag = "v1.7.0-beta.4", package = "identity_iota", optional = true }

[features]
default = ["send-sync-storage", "signature-scheme-aws", "signature-scheme-raw", "signature-scheme-iota"]
send-sync-storage = []
signature-scheme-aws = []
signature-scheme-raw = ["secret-storage/signature-scheme-raw"]
signature-scheme-iota = [
    # Signer, KeySign impl
    "bcs",
    "blake2",
    "iota_interaction",
    "typenum",
    # JwkStorage impl
    "identity_iota", # todo: trim down 
    "k256",
    "p256",
    "serde_json",
    "ed25519",
    "pkcs8",
]
[dev-dependencies]
tokio-test = "0.4"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[patch."https://github.com/iotaledger/secret-storage.git"]
secret-storage = { path = "../../core/secret-storage", package = "secret-storage" }
