[package]
name = "aws-kms-adapter"
version = "0.1.0"
edition = "2021"
authors = ["IOTA Stiftung"]
homepage = "https://www.iota.org"
license = "Apache-2.0"
repository = "https://github.com/iotaledger/secret-storage"
rust-version = "1.65"
description = "AWS KMS adapter for secret-storage core traits"
keywords = ["crypto", "aws", "kms", "storage", "keys"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
aws-config = "1.1"
aws-sdk-kms = "1.94"
k256 = { version = "0.13.3", default-features = false, features = ["std", "ecdsa", "ecdsa-core", "jwk"] }
multi-schema = { path = "../../integration/multi-schema" }
p256 = { version = "0.13.2", default-features = false, features = ["std", "ecdsa", "ecdsa-core", "jwk", "arithmetic"] }
secret-storage = { path = "../../core/secret-storage" }
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"
tokio = { version = "1.0", features = ["full"] }

[features]
default = [
    "env",
    "profile",
    "send-sync-storage"]
env = []
profile = []
send-sync-storage = ["secret-storage/send-sync-storage"]

[dev-dependencies]
hex = "0.4"
tokio-test = "0.4"
chrono = { version = "0.4", features = ["serde"] }
