[package]
name = "hv-iota-e2e-test"
version = "0.1.0"
edition = "2021"
authors = ["IOTA Stiftung"]
homepage = "https://www.iota.org"
license = "Apache-2.0"
repository = "https://github.com/iotaledger/secret-storage"
rust-version = "1.65"
description = "REST API for IOTA Secret Storage transaction orchestration"
keywords = ["iota", "api", "vault", "storage", "transaction"]

[[bin]]
name = "hv-iota-e2e-test"
path = "src/main.rs"

[dependencies]
# Core dependencies
secret-storage = { path = "../../core/secret-storage" }
storage-factory = { path = "../storage-factory" }
vault-adapter = { path = "../../adapters/vault-adapter" }

# Web framework
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# HTTP client for health checks
reqwest = { version = "0.12", features = ["json"] }

# Environment configuration
dotenvy = "0.15"

# Hex encoding/decoding
hex = "0.4"

# Async trait support
async-trait = "0.1"

# IOTA dependencies (matching storage-factory)
iota = { git = "https://github.com/iotaledger/iota.git", package = "iota", tag = "v1.6.1" }
iota-keys = { git = "https://github.com/iotaledger/iota.git", package = "iota-keys", tag = "v1.6.1" }
iota-sdk = { git = "https://github.com/iotaledger/iota.git", package = "iota-sdk", tag = "v1.6.1" }
iota-types = { git = "https://github.com/iotaledger/iota.git", package = "iota-types", tag = "v1.6.1" }
iota-json-rpc-types = { git = "https://github.com/iotaledger/iota.git", package = "iota-json-rpc-types", tag = "v1.6.1" }
shared-crypto = { git = "https://github.com/iotaledger/iota.git", package = "shared-crypto", tag = "v1.6.1" }
blake2 = "0.10"
typenum = "1.17"
bcs = "0.1"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }

[features]
default = ["vault"]
vault = ["storage-factory/vault"]
aws = ["storage-factory/aws-kms"]