[package]
name = "multi-schema-to-iota"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
bcs = { version = "0.1" }
blake2 = { version = "0.10" }
ed25519 = { version = "2.2", features = ["pkcs8", "alloc", "zeroize"] }
identity_iota = { git = "https://github.com/iotaledger/identity.git", tag = "v1.7.0-beta.4", package = "identity_iota" }
iota_interaction = { git = "https://github.com/iotaledger/product-core.git", tag = "v0.8.6", package = "iota_interaction" }
k256 = { version = "0.13.3", default-features = false, features = ["std", "ecdsa", "ecdsa-core", "jwk"] }
multi-schema = { path = "../../integration/multi-schema" }
p256 = { version = "0.13.2", default-features = false, features = ["std", "ecdsa", "ecdsa-core", "jwk", "arithmetic"] }
pkcs8 = { version = "0.10", features = ["std"] }
secret-storage = { path = "../../core/secret-storage", package = "secret-storage" }
typenum = { version = "1.0" }

[features]
default = ["send-sync-storage"]
send-sync-storage = [
    "iota_interaction/send-sync-transaction",
    "secret-storage/send-sync-storage"
]
