[package]
name = "multi-schema-to-iota"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bcs = { version = "0.1" }
blake2 = { version = "0.10" }
ed25519 = { version = "2.2", features = ["pkcs8", "alloc", "zeroize"] }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9", package = "fastcrypto" }
identity_iota = { git = "https://github.com/iotaledger/identity.git", tag = "v1.7.0-beta.4", package = "identity_iota", default-features = false }
iota_interaction = { git = "https://github.com/iotaledger/product-core.git", tag = "v0.8.6", package = "iota_interaction", default-features = false }
k256 = { version = "0.13.3", default-features = false, features = ["std", "ecdsa", "ecdsa-core", "jwk"] }
multi-schema = { git = "https://tbd-github.com/iotaledger/multi-schema.git", tag = "tbd", default-features = false }
p256 = { version = "0.13.2", default-features = false, features = ["std", "ecdsa", "ecdsa-core", "jwk", "arithmetic"] }
pkcs8 = { version = "0.10", features = ["std"] }
secret-storage = { git = "https://github.com/iotaledger/secret-storage.git", tag = "v0.3.0", package = "secret-storage", default-features = false }
typenum = { version = "1.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom_0_2 = { package = "getrandom", version = "0.2", default-features = false, features = ["js"] }

[patch."https://github.com/iotaledger/secret-storage.git"]
secret-storage = { path = "../../core/secret-storage", package = "secret-storage" }

[patch."https://tbd-github.com/iotaledger/multi-schema.git"]
multi-schema = { path = "../../integration/multi-schema" }

[features]
default = ["send-sync-storage"]
send-sync-storage = [
    "identity_iota/send-sync",
    "iota_interaction/send-sync-transaction",
    "multi-schema/send-sync",
    "secret-storage/send-sync-storage"
]