[package]
name = "multi-schema"
version = "0.1.0"
edition = "2024"

[dependencies]
secret-storage = { path = "../../core/secret-storage", package = "secret-storage", default-features = false}
serde = { version = "1.0", features = ["derive", "alloc"] }
serde_json = { version = "1.0", features = ["alloc"] }
strum = { version = "0.27", features = ["derive"] }

[features]
default = ["send-sync"]
send-sync = ["secret-storage/send-sync-storage"]