[package]
name = "typed-key-signer-storage-iota-adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bcs = { version = "0.1" }
blake2 = { version = "0.10" }
ed25519 = { version = "2.2", features = ["pkcs8", "alloc", "zeroize"] }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9", package = "fastcrypto" }
iota_interaction = { git = "https://github.com/iotaledger/product-core.git", tag = "v0.8.17", package = "iota_interaction", default-features = false }
iota-sdk-types = { git = "https://github.com/iotaledger/iota-rust-sdk.git", rev = "7c1434aabb2e7b11681722edaf1a51ac52941b84", features = ["serde"] }
k256 = { version = "0.13.3", default-features = false, features = ["std", "ecdsa", "ecdsa-core", "jwk", "pkcs8"] }
p256 = { version = "0.13.2", default-features = false, features = ["std", "ecdsa", "ecdsa-core", "jwk", "arithmetic"] }
pkcs8 = { version = "0.10", features = ["std"] }
secret-storage = { git = "https://github.com/iotaledger/secret-storage.git", tag = "v0.3.0", package = "secret-storage", default-features = false }
typed-key-signature = { git = "https://tbd-github.com/iotaledger/typed-key-signature.git", tag = "tbd", default-features = false }
typenum = { version = "1.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom_0_2 = { package = "getrandom", version = "0.2", default-features = false, features = ["js"] }

[features]
default = ["send-sync-storage"]
send-sync-storage = [
    "iota_interaction/send-sync-transaction",
    "typed-key-signature/send-sync",
    "secret-storage/send-sync-storage"
]
