[package]
name = "aws-kms-adapter-examples"
version = "0.1.0"
authors = ["IOTA Stiftung"]
edition = "2024"

[lib]
name = "examples"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
aws-kms-adapter = { path = "../" }
hex = "0.4"
identity_ecdsa_verifier = { git = "https://github.com/iotaledger/identity.git", tag = "v1.9.9-beta.1", default-features = false, features = ["es256", "es256k"] }
identity_eddsa_verifier = { git = "https://github.com/iotaledger/identity.git", tag = "v1.9.9-beta.1", default-features = false, features = ["ed25519"] }
identity_storage = { git = "https://github.com/iotaledger/identity.git", tag = "v1.9.9-beta.1", default-features = false  }
identity_stronghold = { git = "https://github.com/iotaledger/identity.git", tag = "v1.9.9-beta.1", default-features = false, features = ["send-sync-storage"] }
iota-sdk = { git = "https://github.com/iotaledger/iota.git", package = "iota-sdk", tag = "v1.24.0" }
iota-sdk-legacy = { package = "iota-sdk", version = "1.0", default-features = false, features = ["tls", "client", "stronghold"] }
notarization = { git = "https://github.com/iotaledger/notarization.git", tag = "v0.1.23", features = ["irl"] }
product_common = { git = "https://github.com/iotaledger/product-core.git", tag = "v0.8.20", package = "product_common", features = ["core-client", "transaction"] }
rand = "0.8.5"
secret-storage = { path = "../../../core/secret-storage", default-features = false }
serde_json = { version = "1.0", default-features = false }
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
typed-key-jwk-storage-iota-adapter = { path = "../../../integration/typed-key-jwk-storage-iota-adapter" }
typed-key-signature = { path = "../../../integration/typed-key-signature", default-features = false }
typed-key-signer-storage-iota-adapter = { path = "../../../integration/typed-key-signer-storage-iota-adapter" }

[dependencies.identity_iota]
git = "https://github.com/iotaledger/identity.git"
tag = "v1.9.9-beta.1"
default-features = false
features = [
  "domain-linkage",
  "jpt-bbs-plus",
  "iota-client",
  "send-sync",
  "memstore",
  "resolver",
  "revocation-bitmap",
  "sd-jwt",
  "status-list-2021",
  "keytool",
  "gas-station",
  "default-http-client",
  "irl",
]

[[example]]
name = "key_deletion_demo"
path = "0_basic/key_deletion_demo.rs"

[[example]]
name = "signing_demo"
path = "0_basic/signing_demo.rs"

[[example]]
name = "secp256r1_demo"
path = "0_basic/secp256r1_demo.rs"

[[example]]
name = "0_use_new_keys"
path = "1_integration/0_use_new_keys.rs"

[[example]]
name = "1_use_existing_key"
path = "1_integration/1_use_existing_key.rs"

[[example]]
name = "2_schedule_key_deletion"
path = "1_integration/2_schedule_key_deletion.rs"
