[package]
name = "multi_schema_to_iota_wasm"
version = "0.0.1"
authors = ["IOTA Stiftung"]
edition = "2021"
homepage = "https://www.iota.org"
keywords = ["crypto", "aws", "kms", "storage", "keys", "wasm"]
license = "Apache-2.0"
publish = false
readme = "README.md"
repository = "https://github.com/iotaledger/secret-storage"
description = "Web Assembly bindings for the aws-kms-adapter crate."

[workspace]
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
async-trait = { version = "0.1", default-features = false }
aws-config = { version = "1.1", default-features = false }
aws-credential-types = { version = "1", default-features = false }
# aws-kms-adapter = { path = "../../../../../adapters/aws-kms-adapter", default-features = false }
aws-sdk-kms = { version = "1.94", default-features = false }
aws-smithy-async = { version = "1.2.14"}
aws-smithy-runtime-api = { version = "1.11.6", features = ["http-1x"]}
aws-smithy-types = { version = "1.4.6"}
bcs = "0.1.6"
serde_json = { version = "1.0", default-features = false }
getrandom = { version = "0.2", features = ["js"] }
http-1x = { package = "http", version = "1.3.1" }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9", package = "fastcrypto" }
identity_iota = { git = "https://github.com/iotaledger/identity.git", tag = "v1.7.0-beta.4", package = "identity_iota", default-features = false }
iota_interaction = { git = "https://github.com/iotaledger/product-core.git", tag = "v0.8.14", package = "iota_interaction", default-features = false }
iota_interaction_ts = { git = "https://github.com/iotaledger/product-core.git", tag = "v0.8.14", package = "iota_interaction_ts" }
# js-sys = { version = "=0.3.79" }
js-sys = { version = "=0.3.85" }
multi-schema = { git = "https://tbd-github.com/iotaledger/multi-schema.git", tag = "tbd", default-features = false }
multi-schema-to-iota = { path = "../../..", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
secret-storage = { git = "https://github.com/iotaledger/secret-storage.git", tag = "v0.3.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
# wasm-8indgen = { version = "=0.2.102", features = ["serde-serialize"] }
wasm-bindgen = { version = "=0.2.108", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4", default-features = false }

[dev-dependencies]
wasm-bindgen-test = { version = "0.3.52"}

[profile.release]
opt-level = 's'
lto = true
debug = true # improve stack traces

[lints.clippy]
# can be removed as soon as fix has been added to clippy
# see https://github.com/rust-lang/rust-clippy/issues/12377
empty_docs = "allow"
large_enum_variant = "allow"

[lints.rust]
# required for current wasm_bindgen version
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }

[features]
default = []

[patch."https://github.com/iotaledger/secret-storage.git"]
secret-storage = { path = "../../../../../core/secret-storage", package = "secret-storage" }

[patch."https://tbd-github.com/iotaledger/multi-schema.git"]
multi-schema = { path = "../../../../../integration/multi-schema" }