[package]
name = "typed_key_jwk_storage_iota_adapter_wasm"
version = "0.0.1"
authors = ["IOTA Stiftung"]
edition = "2021"
homepage = "https://www.iota.org"
keywords = ["crypto", "iota", "identity", "jwk", "storage", "wasm"]
license = "Apache-2.0"
publish = false
readme = "README.md"
repository = "https://github.com/iotaledger/secret-storage"
description = "WebAssembly bindings for typed-key-jwk-storage-iota-adapter."

[workspace]
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
async-trait = { version = "0.1", default-features = false }
bcs = "0.1.6"
serde_json = { version = "1.0", default-features = false }
getrandom = { version = "0.2", features = ["js"] }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9", package = "fastcrypto" }
identity_iota = { git = "https://github.com/iotaledger/identity.git", tag = "v1.9.7-beta.1", package = "identity_iota", default-features = false }
iota_interaction = { git = "https://github.com/iotaledger/product-core.git", tag = "v0.8.17", package = "iota_interaction", default-features = false }
js-sys = { version = "=0.3.85" }
typed-key-signature = { git = "https://tbd-github.com/iotaledger/typed-key-signature.git", tag = "tbd", default-features = false }
typed-key-jwk-storage-iota-adapter = { path = "../../..", default-features = false }
typed-key-signer-storage-iota-adapter = { path = "../../../../typed-key-signer-storage-iota-adapter", default-features = false }
secret-storage = { git = "https://github.com/iotaledger/secret-storage.git", tag = "v0.3.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
tsify = "0.5.6"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = { version = "=0.2.108", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4", default-features = false }

[dev-dependencies]
wasm-bindgen-test = { version = "0.3.52" }

[profile.release]
opt-level = 's'
lto = true
debug = true

[lints.clippy]
empty_docs = "allow"
large_enum_variant = "allow"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }

[features]
default = []

[patch."https://github.com/iotaledger/secret-storage.git"]
secret-storage = { path = "../../../../../core/secret-storage", package = "secret-storage" }

[patch."https://tbd-github.com/iotaledger/typed-key-signature.git"]
typed-key-signature = { path = "../../../../../integration/typed-key-signature" }
